@@ -157,7 +157,7 @@ void CGUIEnvironment::loadBuiltInFont()
 	CGUIFont* font = new CGUIFont(this, "#DefaultFont");
 	if (!font->load(file))
 	{
-		os::Printer::log("Error: Could not load built-in Font.", ELL_ERROR);
+		os::Printer::log("Error: Could not load built-in Font. Did you compile without the BMP loader?", ELL_ERROR);
 		font->drop();
 		file->drop();
 		return;
